--- a/fleet_msg/package.xml
+++ b/fleet_msg/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>controller_action_msg</name>
+  <name>fleet_msg</name>
   <version>0.0.0</version>
-  <description>Custom controller messages for Andino robot</description>
+  <description>Custom messages for Andino fleet manager</description>
   <maintainer email="peera.tienthong@gmail.com">peera_desktop</maintainer>
   <license>TODO: License declaration</license>
 
@@ -11,13 +11,10 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
-  <depend>builtin_interfaces</depend>
-  <depend>action_msgs</depend>
-  <depend>geometry_msgs</depend>
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
-  
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
