Adds fleet manager service and check robot online functionalities

--- a/fleet_msg/CMakeLists.txt
+++ b/fleet_msg/CMakeLists.txt
@@ -22,7 +22,7 @@ if(BUILD_TESTING)
 endif()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "srv/QueryController.srv"
+  "srv/RobotControl.srv"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
