--- a/andino_fleet/package.xml
+++ b/andino_fleet/package.xml
@@ -17,6 +17,9 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>tf_transformations</exec_depend>
+  <exec_depend>fleet_msg</exec_depend>
+  <exec_depend>turtle_tf2_py</exec_depend>
+  
   
   <export>
     <build_type>ament_python</build_type>
