Fixes remapping topics to support multiple robots

--- a/andino_fleet/config/spawn_robots.yaml
+++ b/andino_fleet/config/spawn_robots.yaml
@@ -8,8 +8,8 @@ andino2:
   y: 0.1
   z: 0.1
   yaw: 0.0
-andino3:
-  x: -0.4
-  y: -0.1
-  z: 0.1
-  yaw: 0.0
+#andino3:
+#  x: -0.4
+#  y: -0.1
+#  z: 0.1
+#  yaw: 0.0
