--- a/andino_fleet/config/spawn_robots.yaml
+++ b/andino_fleet/config/spawn_robots.yaml
@@ -1,3 +1,13 @@
+# This file configures the robots that spawn on the simulation and sets the position of each one.
+# The configuration values should follow the next pattern:
+
+# name_of_robot:
+#    x:
+#    y:
+#    z:
+#    yaw:
+
+# Take into account that the values for the x, y and z fields depend on the simulation environment.
 andino1:
   x: 0.0
   y: 0.0
