--- a/fleet_msg/CMakeLists.txt
+++ b/fleet_msg/CMakeLists.txt
@@ -25,6 +25,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/RobotControl.srv"
   "srv/SendGoal.srv"
   "srv/CancelGoal.srv"
+  "srv/RequestRobotPosition.srv"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
