Adds RemoveAllGoals message and modifies RobotAPI class

--- a/fleet_msg/CMakeLists.txt
+++ b/fleet_msg/CMakeLists.txt
@@ -26,6 +26,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/SendGoal.srv"
   "srv/CancelGoal.srv"
   "srv/RequestRobotPosition.srv"
+  "srv/RemoveAllGoals.srv"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
