--- a/controller_action_msg/CMakeLists.txt
+++ b/controller_action_msg/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+    "msg/RobotPose.msg"  
     "action/AndinoController.action"
     DEPENDENCIES builtin_interfaces geometry_msgs action_msgs
 )
