Fleet adapter Implementation (#9)
* Creates andino_fleet_adapter package

* Adds config.yaml file

* Creates RobotPosition message

* Adds RemoveAllGoals message and modifies RobotAPI class

* Creates a RobotPose message

* Implements publisher and subscriber for RobotPose message

* Update andino_fleet/andino_fleet/fleet_manager_server.py

Co-authored-by: Eloy Briceno <51831786+Voldivh@users.noreply.github.com>

* Adds requested changes

* Implements navigation_remaining_duration method in RobotClientAPI

* Adds test script for RobotClientAPI

* Deletes .pyc files and adds some comments on test script

* Adds requested changes

---------

Co-authored-by: Eloy Briceno <51831786+Voldivh@users.noreply.github.com>

--- a/fleet_msg/CMakeLists.txt
+++ b/fleet_msg/CMakeLists.txt
@@ -25,6 +25,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/RobotControl.srv"
   "srv/SendGoal.srv"
   "srv/CancelGoal.srv"
+  "srv/RequestRobotPosition.srv"
+  "srv/RemoveAllGoals.srv"
 )
 
 ament_export_dependencies(rosidl_default_runtime)
