Adds launch files for RMF pipeline

--- a/andino_fleet_adapter/package.xml
+++ b/andino_fleet_adapter/package.xml
@@ -10,6 +10,7 @@
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
   <exec_depend>rmf_fleet_adapter_python</exec_depend>
+  <depend>nudged</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
