--- a/rmf_maps/package.xml
+++ b/rmf_maps/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>rmf_maps</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>A package to contain map resources and generate models and nav graph</description>
   <maintainer email="ptientho@stevens.edu">peera</maintainer>
   <license>TODO: License declaration</license>
 
