--- a/andino_fleet_adapter/config.yaml
+++ b/andino_fleet_adapter/config.yaml
@@ -2,7 +2,7 @@
 # RMF Fleet parameters
 
 rmf_fleet:
-  name: "AndinoBot"
+  name: "Andino"
   fleet_manager:
     prefix: "http://127.0.0.1:8000"
     user: "some_user"
@@ -15,17 +15,17 @@ rmf_fleet:
     vicinity: 0.6 # radius in m
   reversible: False # whether robots in this fleet can reverse
   battery_system:
-    voltage: 24.0 # V
-    capacity: 40.0 # Ahr
-    charging_current: 26.4 # A
+    voltage: 12.0 # V
+    capacity: 24.0 # Ahr
+    charging_current: 5.0 # A
   mechanical_system:
-    mass: 80.0 # kg
-    moment_of_inertia: 20.0 #kgm^2
+    mass: 10.0 # kg
+    moment_of_inertia: 10.0 #kgm^2
     friction_coefficient: 0.20
   ambient_system:
     power: 20.0 # W
   tool_system:
-    power: 760.0 # W
+    power: 0.0 # W
   recharge_threshold: 0.20 # Battery level below which robots in this fleet will not operate
   recharge_soc: 1.0 # Battery level to which robots in this fleet should be charged up to during recharging tasks
   publish_fleet_state: True
@@ -34,7 +34,7 @@ rmf_fleet:
     loop: True
     delivery: False
     clean: False
-    finishing_request: "nothing" # [park, charge, nothing]
+    finishing_request: "park" # [park, charge, nothing]
 
 # DeliveryBot CONFIG =================================================================
 
@@ -42,34 +42,32 @@ robots:
   # Here the user is expected to append the configuration for each robot in the
   # fleet.
   # Configuration for first robot in this fleet
-  deliverybot1:
+  andino1:
     robot_config:
-      max_delay: 10.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
+      max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
     rmf_config:
-      robot_state_update_frequency: 0.5
+      robot_state_update_frequency: 10.0
       start:
         map_name: "L1"
-        # waypoint: "charger_deliverybot1" # Optional
-        # orientation: 0.0 # Optional, radians
-        waypoint: null
-        orientation: null
+        waypoint: "spawn_robot1"
+        orientation: 0.0 # radians
       charger:
-        waypoint: "charger_deliverybot1"
+        waypoint: "spawn_robot1"
   # Configuration for the second robot in this fleet if there is a second robot
   # Uncomment if more than one robot exists.
-  # deliverybot2:
-  #   robot_config:
-  #     max_delay: 10.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
-  #   rmf_config:
-  #     robot_state_update_frequency: 0.5
-  #     start:
-  #       map_name: "L1"
-  #       # waypoint: "charger_deliverybot2" # Optional
-  #       # orientation: 0.0 # Optional, radians
-  #       waypoint: null
-  #       orientation: null
-  #     charger:
-  #       waypoint: "charger_deliverybot2"
+  andino2:
+    robot_config:
+      max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
+    rmf_config:
+      robot_state_update_frequency: 10.0
+      start:
+        map_name: "L1"
+        # waypoint: "charger_deliverybot2" # Optional
+        # orientation: 0.0 # Optional, radians
+        waypoint: "spawn_robot2"
+        orientation: 0.0 # radians
+      charger:
+        waypoint: "spawn_robot2"
 
 # TRANSFORM CONFIG =============================================================
 # For computing transforms between Robot and RMF coordinate systems
