--- a/andino_fleet_adapter/config.yaml
+++ b/andino_fleet_adapter/config.yaml
@@ -2,83 +2,63 @@
 # RMF Fleet parameters
 
 rmf_fleet:
-  name: "Andino"
-  fleet_manager:
-    prefix: "http://127.0.0.1:8000"
-    user: "some_user"
-    password: "some_password"
+  name: "AndinoBot"
   limits:
-    linear: [0.4, 0.2] # velocity, acceleration
-    angular: [0.3, 0.35] # velocity, acceleration
+    linear: [0.5, 0.75] # velocity, acceleration
+    angular: [0.6, 2.0] # velocity, acceleration
   profile: # Robot profile is modelled as a circle
-    footprint: 0.5 # radius in m
-    vicinity: 0.6 # radius in m
-  reversible: False # whether robots in this fleet can reverse
+    footprint: 0.3 # radius in m
+    vicinity: 0.5 # radius in m
+  reversible: True # whether robots in this fleet can reverse
   battery_system:
     voltage: 12.0 # V
     capacity: 24.0 # Ahr
     charging_current: 5.0 # A
   mechanical_system:
-    mass: 10.0 # kg
+    mass: 20.0 # kg
     moment_of_inertia: 10.0 #kgm^2
-    friction_coefficient: 0.20
+    friction_coefficient: 0.22
   ambient_system:
     power: 20.0 # W
   tool_system:
     power: 0.0 # W
-  recharge_threshold: 0.20 # Battery level below which robots in this fleet will not operate
+  recharge_threshold: 0.10 # Battery level below which robots in this fleet will not operate
   recharge_soc: 1.0 # Battery level to which robots in this fleet should be charged up to during recharging tasks
-  publish_fleet_state: True
+  publish_fleet_state: 10.0 # Publish frequency for fleet state, ensure that it is same as robot_state_update_frequency
   account_for_battery_drain: True
   task_capabilities: # Specify the types of RMF Tasks that robots in this fleet are capable of performing
     loop: True
-    delivery: False
-    clean: False
-    finishing_request: "park" # [park, charge, nothing]
+    delivery: True
+  actions: ["some_action_here"]
+  finishing_request: "park" # [park, charge, nothing]
+  responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
+  robots:
+    andino1:
+        charger: "spawn_robot1"
+        responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+    andino2:
+        charger: "spawn_robot2"
+        # No mention of responsive_wait means the fleet-wide setting will be used
 
-# DeliveryBot CONFIG =================================================================
+  robot_state_update_frequency: 10.0 # Hz
 
-robots:
-  # Here the user is expected to append the configuration for each robot in the
-  # fleet.
-  # Configuration for first robot in this fleet
-  andino1:
-    robot_config:
-      max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
-    rmf_config:
-      robot_state_update_frequency: 10.0
-      start:
-        map_name: "L1"
-        waypoint: "spawn_robot1"
-        orientation: 0.0 # radians
-      charger:
-        waypoint: "spawn_robot1"
-  # Configuration for the second robot in this fleet if there is a second robot
-  # Uncomment if more than one robot exists.
-  andino2:
-    robot_config:
-      max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
-    rmf_config:
-      robot_state_update_frequency: 10.0
-      start:
-        map_name: "L1"
-        # waypoint: "charger_deliverybot2" # Optional
-        # orientation: 0.0 # Optional, radians
-        waypoint: "spawn_robot2"
-        orientation: 0.0 # radians
-      charger:
-        waypoint: "spawn_robot2"
+fleet_manager:
+  prefix: "http://127.0.0.1:8080"
+  user: "some_user"
+  password: "some_password"
+
 
 # TRANSFORM CONFIG =============================================================
 # For computing transforms between Robot and RMF coordinate systems
 
+# Optional
 reference_coordinates:
-  rmf: [[20.33, -3.156],
-        [8.908, -2.57],
-        [13.02, -3.601],
-        [21.93, -4.124]]
-  robot: [[59, 399],
-        [57, 172],
-        [68, 251],
-        [75, 429]]
-        
+  L1:
+    rmf: [[20.33, -3.156],
+          [8.908, -2.57],
+          [13.02, -3.601],
+          [21.93, -4.124]]
+    robot: [[59, 399],
+          [57, 172],
+          [68, 251],
+          [75, 429]]
