Adds logging messages

--- a/andino_fleet_adapter/config.yaml
+++ b/andino_fleet_adapter/config.yaml
@@ -55,19 +55,19 @@ robots:
         waypoint: "spawn_robot1"
   # Configuration for the second robot in this fleet if there is a second robot
   # Uncomment if more than one robot exists.
-  andino2:
-    robot_config:
-      max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
-    rmf_config:
-      robot_state_update_frequency: 10.0
-      start:
-        map_name: "L1"
+  #andino2:
+  #  robot_config:
+  #    max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
+  #  rmf_config:
+  #    robot_state_update_frequency: 10.0
+  #    start:
+  #      map_name: "L1"
         # waypoint: "charger_deliverybot2" # Optional
         # orientation: 0.0 # Optional, radians
-        waypoint: "spawn_robot2"
-        orientation: 0.0 # radians
-      charger:
-        waypoint: "spawn_robot2"
+  #      waypoint: "spawn_robot2"
+  #      orientation: 0.0 # radians
+  #    charger:
+  #      waypoint: "spawn_robot2"
 
 # TRANSFORM CONFIG =============================================================
 # For computing transforms between Robot and RMF coordinate systems
