--- a/andino_fleet_adapter/config.yaml
+++ b/andino_fleet_adapter/config.yaml
@@ -13,7 +13,7 @@ rmf_fleet:
   profile: # Robot profile is modelled as a circle
     footprint: 0.5 # radius in m
     vicinity: 0.6 # radius in m
-  reversible: False # whether robots in this fleet can reverse
+  reversible: True # whether robots in this fleet can reverse
   battery_system:
     voltage: 12.0 # V
     capacity: 24.0 # Ahr
@@ -28,7 +28,7 @@ rmf_fleet:
     power: 0.0 # W
   recharge_threshold: 0.20 # Battery level below which robots in this fleet will not operate
   recharge_soc: 1.0 # Battery level to which robots in this fleet should be charged up to during recharging tasks
-  publish_fleet_state: True
+  publish_fleet_state: 10.0
   account_for_battery_drain: True
   task_capabilities: # Specify the types of RMF Tasks that robots in this fleet are capable of performing
     loop: True
@@ -55,19 +55,17 @@ robots:
         waypoint: "spawn_robot1"
   # Configuration for the second robot in this fleet if there is a second robot
   # Uncomment if more than one robot exists.
-  #andino2:
-  #  robot_config:
-  #    max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
-  #  rmf_config:
-  #    robot_state_update_frequency: 10.0
-  #    start:
-  #      map_name: "L1"
-        # waypoint: "charger_deliverybot2" # Optional
-        # orientation: 0.0 # Optional, radians
-  #      waypoint: "spawn_robot2"
-  #      orientation: 0.0 # radians
-  #    charger:
-  #      waypoint: "spawn_robot2"
+  andino2:
+    robot_config:
+      max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
+    rmf_config:
+      robot_state_update_frequency: 10.0
+      start:
+        map_name: "L1"
+        waypoint: "spawn_robot2"
+        orientation: 3.14 # radians
+      charger:
+        waypoint: "spawn_robot2"
 
 # TRANSFORM CONFIG =============================================================
 # For computing transforms between Robot and RMF coordinate systems
