--- a/andino_fleet_adapter/config.yaml
+++ b/andino_fleet_adapter/config.yaml
@@ -28,7 +28,7 @@ rmf_fleet:
     power: 0.0 # W
   recharge_threshold: 0.20 # Battery level below which robots in this fleet will not operate
   recharge_soc: 1.0 # Battery level to which robots in this fleet should be charged up to during recharging tasks
-  publish_fleet_state: 10.0
+  publish_fleet_state: True # 10.0
   account_for_battery_drain: True
   task_capabilities: # Specify the types of RMF Tasks that robots in this fleet are capable of performing
     loop: True
