--- a/andino_fleet_adapter/config.yaml
+++ b/andino_fleet_adapter/config.yaml
@@ -13,7 +13,7 @@ rmf_fleet:
   profile: # Robot profile is modelled as a circle
     footprint: 0.5 # radius in m
     vicinity: 0.6 # radius in m
-  reversible: True # whether robots in this fleet can reverse
+  reversible: False # whether robots in this fleet can reverse
   battery_system:
     voltage: 12.0 # V
     capacity: 24.0 # Ahr
@@ -28,13 +28,13 @@ rmf_fleet:
     power: 0.0 # W
   recharge_threshold: 0.20 # Battery level below which robots in this fleet will not operate
   recharge_soc: 1.0 # Battery level to which robots in this fleet should be charged up to during recharging tasks
-  publish_fleet_state: True # 10.0
+  publish_fleet_state: True
   account_for_battery_drain: True
   task_capabilities: # Specify the types of RMF Tasks that robots in this fleet are capable of performing
     loop: True
     delivery: False
     clean: False
-    finishing_request: "park" # [park, charge, nothing]
+    finishing_request: "nothing" # [park, charge, nothing]
 
 # DeliveryBot CONFIG =================================================================
 
@@ -44,9 +44,9 @@ robots:
   # Configuration for first robot in this fleet
   andino1:
     robot_config:
-      max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
+      max_delay: 10.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
     rmf_config:
-      robot_state_update_frequency: 10.0
+      robot_state_update_frequency: 0.5
       start:
         map_name: "L1"
         waypoint: "spawn_robot1"
@@ -57,9 +57,9 @@ robots:
   # Uncomment if more than one robot exists.
   andino2:
     robot_config:
-      max_delay: 15.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
+      max_delay: 10.0 # allowed seconds of delay of the current itinerary before it gets interrupted and replanned
     rmf_config:
-      robot_state_update_frequency: 10.0
+      robot_state_update_frequency: 0.5
       start:
         map_name: "L1"
         waypoint: "spawn_robot2"
