--- a/fleet_msg/package.xml
+++ b/fleet_msg/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>Custom messages for Andino fleet manager</description>
   <maintainer email="peera.tienthong@gmail.com">peera_desktop</maintainer>
-  <license>TODO: License declaration</license>
+  <license file="LICENSE">BSD Clause 3</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
