--- a/rmf_maps/package.xml
+++ b/rmf_maps/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>A package to contain map resources and generate models and nav graph</description>
   <maintainer email="ptientho@stevens.edu">peera</maintainer>
-  <license>TODO: License declaration</license>
+  <license file="LICENSE">BSD Clause 3</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rmf_building_map_tools</buildtool_depend>
