--- a/andino_fleet_adapter/config.yaml
+++ b/andino_fleet_adapter/config.yaml
@@ -9,10 +9,10 @@ rmf_fleet:
     password: "some_password"
   limits:
     linear: [0.4, 0.2] # velocity, acceleration
-    angular: [0.3, 0.35] # velocity, acceleration
+    angular: [0.6, 0.35] # velocity, acceleration
   profile: # Robot profile is modelled as a circle
     footprint: 0.5 # radius in m
-    vicinity: 0.6 # radius in m
+    vicinity: 0.8 # radius in m
   reversible: False # whether robots in this fleet can reverse
   battery_system:
     voltage: 12.0 # V
@@ -34,7 +34,7 @@ rmf_fleet:
     loop: True
     delivery: False
     clean: False
-    finishing_request: "nothing" # [park, charge, nothing]
+    finishing_request: "park" # [park, charge, nothing]
 
 # DeliveryBot CONFIG =================================================================
 
@@ -74,9 +74,15 @@ reference_coordinates:
   rmf: [[16.0409, -11.4548],
         [20.4791, -11.4759],
         [18.2811, -11.4548],
-        [18.3022, -9.9754]]
+        [18.3022, -9.9754],
+        [4.6239, -9.9478],
+        [4.8148, -14.8899],
+        [30.4586, -9.9266]]
   robot: [[-2.26, 1.2469],
         [2.1769, 1.2258],
         [0.0, 1.2469],
-        [0.0, 2.7263]]
+        [0.0, 2.7263],
+        [-13.6990, 2.6686],
+        [-13.4898, -2.2277],
+        [12.0982, 2.7879]]
         
