--- a/andino_fleet_msg/package.xml
+++ b/andino_fleet_msg/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>fleet_msg</name>
+  <name>andino_fleet_msg</name>
   <version>0.0.0</version>
   <description>Custom messages for Andino fleet manager</description>
   <maintainer email="eloy.briceno@ekumenlabs.com">Eloy Briceno</maintainer>
