Modifies names and licences for Open Sourcing (#18)
* Modifies names and licences for OpenSourcing

Signed-off-by: Voldivh <eloyabmfcv@gmail.com>

* Modifies the name of fleet_msg package

Signed-off-by: Voldivh <eloyabmfcv@gmail.com>

---------

Signed-off-by: Voldivh <eloyabmfcv@gmail.com>

--- a/andino_rmf_maps/package.xml
+++ b/andino_rmf_maps/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>fleet_msg</name>
+  <name>andino_rmf_maps</name>
   <version>0.0.0</version>
-  <description>Custom messages for Andino fleet manager</description>
-  <maintainer email="peera.tienthong@gmail.com">peera_desktop</maintainer>
+  <description>A package to contain map resources and generate models and nav graph</description>
+  <maintainer email="eloy.briceno@ekumenlabs.com">Eloy Briceno</maintainer>
+  <maintainer email="ptientho@stevens.edu">Peera Tienthong</maintainer>
   <license file="LICENSE">BSD Clause 3</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rmf_building_map_tools</buildtool_depend>
+  <buildtool_depend>ros2run</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-  <build_depend>rosidl_default_generators</build_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
-  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
