--- a/andino_fleet/package.xml
+++ b/andino_fleet/package.xml
@@ -3,9 +3,10 @@
 <package format="3">
   <name>andino_fleet</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
-  <license>Apache-2.0</license>
+  <description>This package contains the andino controller and manager</description>
+  <maintainer email="eloy.briceno@ekumenlabs.com">Eloy Briceno</maintainer>
+  <maintainer email="ptientho@stevens.edu">Peera Tienthong</maintainer>
+  <license file="LICENSE">BSD Clause 3</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
@@ -17,7 +18,7 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>tf_transformations</exec_depend>
-  <exec_depend>fleet_msg</exec_depend>
+  <exec_depend>andino_fleet_msg</exec_depend>
   
   <export>
     <build_type>ament_python</build_type>
