--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -22,10 +22,7 @@ python3-setuptools
 ros-humble-andino-description
 ros-humble-andino-slam
 ros-humble-nav2-common
-ros-humble-rmf-building-map-tools
-ros-humble-rmf-traffic-ros2
-ros-humble-rmf-fleet-adapter
-ros-humble-rmf-fleet-adapter-python
+ros-humble-rmf-dev
 ros-humble-tf-transformations
 software-properties-common
 sudo
