--- a/andino_rmf_sim/package.xml
+++ b/andino_rmf_sim/package.xml
@@ -10,10 +10,9 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>rmf_building_sim_gz_plugins</exec_depend>
-  <exec_depend>rmf_fleet_adapter</exec_depend>
-  <exec_depend>rmf_robot_sim_gz_plugins</exec_depend>
-  <exec_depend>rmf_traffic_ros2</exec_depend>
+  <!-- Aggregate all the packages required for a minimal RMF installation -->
+  <exec_depend>rmf_dev</exec_depend>
+
   <exec_depend>teleop_twist_keyboard</exec_depend>
   <exec_depend>launch_xml</exec_depend>
   <exec_depend>ignition-fortress</exec_depend>
